<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>behavior_tree</name>
  <version>0.0.0</version>
  <description>BehaviorTree</description>
  <maintainer email="doguto110@gmail.com">kuto</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>ament_cmake_auto</depend>
  <!-- 実行時に xml ファイルのパスを解決するための get_package_share_directory を使用出来るように -->
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
